bynkc/tests/fixtures/negative/395_reserved_builtin_type_redeclare/input.bynk
commons demo {
  -- `QueueResult` is a non-generic built-in: without this guard the parser
  -- silently discards the alias and later references fail incoherently.
  type QueueResult = String

  -- `Query` is a generic built-in: without this guard a reference is told the
  -- user's own alias needs a type argument.
  type Query = String
}
